--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html{
+    scroll-behavior: smooth;
+}
+
+*{ 
+    font-family: 'Roboto';
+
+
+}
+
+h1,h2,h3 {
+    font-family: 'Poppins';
+}
+
+.poppins{
+    font-family: 'Poppins', sans-serif;
+}
